Be a bettrer net citizen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏑</text></svg>"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="HockeyScorer - A simple, intuitive field hockey score tracking application for teams and coaches"
+    />
+    <meta
+      name="keywords"
+      content="hockey, field hockey, sports, scoreboard, score tracker, team sports"
+    />
+    <meta name="author" content="hockeyscorer.app" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hockeyscorer.app/" />
+    <meta property="og:title" content="HockeyScorer - Field Hockey Score Tracker" />
+    <meta
+      property="og:description"
+      content="A simple, intuitive field hockey score tracking application for teams and coaches"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="HockeyScorer - Field Hockey Score Tracker" />
+    <meta
+      name="twitter:description"
+      content="A simple, intuitive field hockey score tracking application for teams and coaches"
+    />
+
     <title>HockeyScorer</title>
   </head>
   <body>
